--- a/src/app/modules/settings-v2/security/two-factor-v2/two-factor-v2-base.component.html
+++ b/src/app/modules/settings-v2/security/two-factor-v2/two-factor-v2-base.component.html
@@ -25,7 +25,7 @@
 </m-settingsV2__header>
 
 <!-- Panels -->
-<ng-container [ngSwitch]="activePanel$ | async">
+<ng-container [ngSwitch]="(activePanel$ | async)?.panel">
   <m-settings__twoFactorRoot *ngSwitchCase="'root'"></m-settings__twoFactorRoot>
   <m-twoFactor__passwordConfirm
     *ngSwitchCase="'password'"
@@ -36,4 +36,7 @@
   <m-twoFactor__connectApp
     *ngSwitchCase="'app-connect'"
   ></m-twoFactor__connectApp>
+  <m-twoFactor__confirmDisable
+    *ngSwitchCase="'disable'"
+  ></m-twoFactor__confirmDisable>
 </ng-container>
