Added in basic SMS

--- a/src/app/modules/settings-v2/security/two-factor-v2/two-factor-v2-base.component.html
+++ b/src/app/modules/settings-v2/security/two-factor-v2/two-factor-v2-base.component.html
@@ -39,4 +39,5 @@
   <m-twoFactor__confirmDisable
     *ngSwitchCase="'disable'"
   ></m-twoFactor__confirmDisable>
+  <m-settings--two-factor *ngSwitchCase="'sms'"></m-settings--two-factor>
 </ng-container>
