--- a/src/app/modules/settings/two-factor/two-factor.component.scss
+++ b/src/app/modules/settings/two-factor/two-factor.component.scss
@@ -6,19 +6,19 @@ m-settings--two-factor {
 
 .m-twoFactor__sendButtonWrapper {
   .m-twoFactor__sendButton {
-    position: relative;
-    cursor: pointer;
-    padding: 10px 20px;
-    min-width: 100px;
-    min-height: 42px;
-    border: 0;
-    transition: all 0.2s ease;
-    outline: 0;
+    // position: relative;
+    // cursor: pointer;
+    // padding: 10px 20px;
+    // min-width: 100px;
+    // min-height: 42px;
+    // border: 0;
+    // transition: all 0.2s ease;
+    // outline: 0;
 
-    @include m-theme {
-      background-color: themed($m-link);
-      color: themed($m-white-always);
-    }
+    // @include m-theme {
+    //   background-color: themed($m-link);
+    //   color: themed($m-white-always);
+    // }
   }
 }
 
