--- a/src/app/modules/settings-v2/security/two-factor-v2/connect-app/connect-app.component.ng.scss
+++ b/src/app/modules/settings-v2/security/two-factor-v2/connect-app/connect-app.component.ng.scss
@@ -23,6 +23,15 @@
     }
   }
 
+  .m-twoFactor__connectAppSubheader--link {
+    cursor: pointer;
+    text-decoration: underline;
+
+    @include m-theme() {
+      color: themed($m-blue);
+    }
+  }
+
   .m-twoFactor__connectAppContainer {
     display: flex;
     flex-flow: column nowrap;
