Improved button styling

--- a/src/app/modules/settings-v2/account/display-name/display-name.component.html
+++ b/src/app/modules/settings-v2/account/display-name/display-name.component.html
@@ -33,9 +33,11 @@
       </div>
     </div>
   </div>
+
   <div class="m-form__buttonsContainer">
     <m-button
       color="blue"
+      size="medium"
       [disabled]="!canSubmit()"
       [saving]="inProgress"
       (onAction)="submit()"
