--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -2,17 +2,17 @@
 
 :host {
   .m-button {
-    //min-width: 220px;
+    font-family: 'Roboto';
     position: relative;
     cursor: pointer;
     padding: 10px 20px;
-    min-width: 100px;
-    min-height: 42px;
-    transition: all 0.1s cubic-bezier(0.23, 1, 0.32, 1);
-    border-radius: 22.5px;
+    transition: all 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 999px;
     outline: 0;
-    font-weight: 400;
+    font-weight: 500;
     background-clip: padding-box;
+    white-space: nowrap;
+
     @include m-theme() {
       border: 1px solid themed($m-borderColor--primary);
       background-color: rgba(themed($m-black-always), 0);
@@ -24,9 +24,12 @@
       justify-content: center;
       width: calc(1em + 16px);
       height: calc(1em + 16px);
-      min-width: 0;
-      min-height: 0;
       padding: 0 !important;
+
+      ::ng-deep i {
+        font-size: 0.9em !important;
+      }
+
       .m-button__text--unsaved {
         ::ng-deep i {
           margin-right: 0 !important;
@@ -42,6 +45,8 @@
     }
 
     ///////////////////////////////////////////////////
+
+    // Normal button
 
     &.m-button--grey {
       @include m-theme() {
@@ -85,6 +90,9 @@
         }
       }
     }
+
+    // Warning button
+
     &.m-button--red {
       @include m-theme() {
         border-color: themed($m-alert);
@@ -123,48 +131,62 @@
     }
 
     ///////////////////////////////////////////////////
+
+    // Extra Small
+
     &.m-button--xsmall {
-      padding: 7px 15px;
-      min-height: 0;
-      min-width: 0;
-      &.m-button--xsmall > * {
-        font-size: 1em;
-        line-height: calc(1em + 5px);
+      padding: 8px 13px;
+
+      & > * {
+        font-size: 14px;
         ::ng-deep i {
           font-size: 18px;
         }
       }
     }
+
+    // Small
+
     &.m-button--small {
-      padding: 8px 20px;
-      &.m-button--small > * {
+      padding: 10px 20px;
+
+      & > * {
         font-size: 16px;
-        line-height: 20px;
+
         ::ng-deep i {
           font-size: 20px;
         }
       }
     }
+
+    // Medium
+
     &.m-button--medium {
-      padding: 10px 20px;
-      &.m-button--medium > * {
-        font-size: 17px;
-        line-height: 21px;
+      padding: 12px 25px;
+
+      & > * {
+        font-size: 18px;
+
         ::ng-deep i {
           font-size: 22px;
         }
       }
     }
+
+    // Large
+
     &.m-button--large {
-      padding: 10px 24px;
-      &.m-button--large > * {
-        font-size: 19px;
-        line-height: 24px;
+      padding: 14px 30px;
+
+      & > * {
+        font-size: 20px;
+
         ::ng-deep i {
           font-size: 24px;
         }
       }
     }
+
     ///////////////////////////////////////////////////
     &:not(:disabled) {
       &:not(.m-button--overlay) {
@@ -208,7 +230,6 @@
       justify-content: center;
       -webkit-font-smoothing: antialiased;
       text-rendering: optimizeLegibility;
-      font-weight: 600;
 
       ::ng-deep {
         i {
@@ -265,7 +286,7 @@
       ::ng-deep {
         > div span:first-child {
           display: inline-block;
-          margin: 0 10px;
+          margin: 0 10px 0 15px;
         }
       }
 
