Lifetime upgrades when purchasing with tokens

--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -72,25 +72,9 @@
             i18n="@@MARKETING_PRO__RECEIVE_TIPS_SUBSCRIPTION"
           >
             Receive tips and subscription payments in USD, Bitcoin, Ether or
-            Minds Tokens. Earn money for driving pageviews, referring active
-            users and sales.
+            Minds Tokens. Earn a revenue-share for driving pageviews and
+            referring new users to Minds.
           </p>
-
-          <ul class="m-marketing__points">
-            <li i18n="@@MARKETING_PRO__COST_PER_PAGEVIEW_SECTION">
-              $1 for every 1,000 pageviews on your content (increases to $5
-              between 100K and 1M pageviews/month)
-            </li>
-
-            <li i18n="@@MARKETING_PRO__REFERRED_SECTION">
-              $0.10 for every referred active user
-            </li>
-
-            <li i18n="@@MARKETING_PRO__COMMISION_SECTION">
-              25% commission on all referred sales of Pro or
-              <a routerLink="/tokens">Minds Tokens</a>
-            </li>
-          </ul>
 
           <a
             class="m-marketing__subText"
@@ -248,8 +232,8 @@
         <div
           class="m-grid__column-4 m-grid__column-4--tablet m-grid__column-12--mobile m-marketing__body"
         >
-          <h3 i18n="@@MARKETING_PRO__UNLOCK_ALL_PRO_FEATURES">
-            Unlock all Plus features
+          <h3 i18n="@@MARKETING_PRO__UNLOCK_ALL_PLUS_FEATURES">
+            Unlock all Minds+ features
           </h3>
 
           <p
@@ -264,8 +248,8 @@
             <a
               routerLink="/plus"
               target="_blank"
-              i18n="@@MARKETING_PRO__LEARN_ABOUT_PLUS"
-              >Learn About Plus</a
+              i18n="@@MARKETING_PRO__LEARN_ABOUT_MINDS_PLUS"
+              >Learn About Minds+</a
             >
           </p>
         </div>
