--- a/src/app/modules/plus/subscription/subscription.component.html
+++ b/src/app/modules/plus/subscription/subscription.component.html
@@ -7,19 +7,6 @@
   >
     <div class="m-plusSubscriptionPlan__toggleContainer">
       <div class="m-plusSubscriptionPlan__toggle">
-        <span i18n="@@PLUS_SUBSCRIPTION_OPTION__YEARLY">Yearly</span>
-        <span
-          ><m-toggle
-            [mModel]="interval"
-            (mModelChange)="setInterval($event)"
-            leftValue="yearly"
-            rightValue="monthly"
-          ></m-toggle
-        ></span>
-        <span i18n="@@PLUS_SUBSCRIPTION_OPTION__MONTHLY">Monthly</span>
-      </div>
-
-      <div class="m-plusSubscriptionPlan__toggle">
         <span i18n="@@PLUS_SUBSCRIPTION_OPTION__USD">USD</span>
         <span
           ><m-toggle
@@ -31,6 +18,23 @@
         ></span>
         <span i18n="@@PLUS_SUBSCRIPTION_OPTION__TOKENS">Tokens</span>
       </div>
+      <div
+        class="m-plusSubscriptionPlan__toggle"
+        [ngClass]="{
+          'm-plusSubscriptionPlan__toggle--hidden': currency !== 'usd'
+        }"
+      >
+        <span i18n="@@PLUS_SUBSCRIPTION_OPTION__YEARLY">Yearly</span>
+        <span
+          ><m-toggle
+            [mModel]="interval"
+            (mModelChange)="setInterval($event)"
+            leftValue="yearly"
+            rightValue="monthly"
+          ></m-toggle
+        ></span>
+        <span i18n="@@PLUS_SUBSCRIPTION_OPTION__MONTHLY">Monthly</span>
+      </div>
     </div>
 
     <div class="m-plusSubscriptionPlan__trial" *ngIf="canHaveTrial">
@@ -38,20 +42,47 @@
     </div>
 
     <div class="m-plusSubscriptionPlan__pricing">
-      <span
-        class="m-plusSubscriptionPlanPricing__amount"
-        i18n="@@PLUS_SUBSCRIPTION__PER_MONTH"
-      >
-        <span>{{ pricing.amount }}</span> per month
-      </span>
+      <ng-container *ngIf="currency === 'usd'">
+        <div>
+          <span
+            class="m-plusSubscriptionPlanPricing__amount"
+            i18n="@@PLUS_SUBSCRIPTION__PER_MONTH"
+          >
+            <span>{{ pricing.amount }}</span> per month
+          </span>
 
-      <span
-        class="m-plusSubscriptionPlanPricing__offer"
-        *ngIf="pricing.offerFrom"
-        i18n="@@PLUS_SUBSCRIPTION__PER_MONTH"
-      >
-        <span>{{ pricing.offerFrom }}</span> per month
-      </span>
+          <span
+            class="m-plusSubscriptionPlanPricing__offer"
+            *ngIf="pricing.offerFrom"
+            i18n="@@PLUS_SUBSCRIPTION__PER_MONTH"
+          >
+            <span>{{ pricing.offerFrom }}</span> per month
+          </span>
+        </div>
+        <div
+          class="m-plusSubscriptionPlanPricing__intervalDesc"
+          *ngIf="interval === 'yearly'"
+        >
+          <span i18n="@@PLUS_SUBSCRIPTION__BILLED_ANNUALLY">
+            Billed annually at {{ pricing.annualAmount }}
+          </span>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="currency === 'tokens'">
+        <div>
+          <span
+            class="m-plusSubscriptionPlanPricing__amount"
+            i18n="@@PLUS_SUBSCRIPTION__MINDS_AMOUNT"
+          >
+            <span>{{ pricing.amount | number }}</span> MINDS
+          </span>
+        </div>
+        <div class="m-plusSubscriptionPlanPricing__intervalDesc">
+          <span i18n="@@PLUS_SUBSCRIPTION__LIFETIME_MEMBERSHIP">
+            Lifetime membership!
+          </span>
+        </div>
+      </ng-container>
     </div>
 
     <div class="m-plusSubscription__button">
