--- a/src/app/modules/pro/subscription/subscription.component.html
+++ b/src/app/modules/pro/subscription/subscription.component.html
@@ -2,19 +2,6 @@
   <div>
     <div class="m-proSubscriptionPlan__toggleContainer">
       <div class="m-proSubscriptionPlan__toggle">
-        <span i18n="@@PRO_SUBSCRIPTION__YEARLY">Yearly</span>
-        <span
-          ><m-toggle
-            [mModel]="interval"
-            (mModelChange)="setInterval($event)"
-            leftValue="yearly"
-            rightValue="monthly"
-          ></m-toggle
-        ></span>
-        <span i18n="@@PRO_SUBSCRIPTION__MONTHLY">Monthly</span>
-      </div>
-
-      <div class="m-proSubscriptionPlan__toggle">
         <span i18n="@@PRO_SUBSCRIPTION__USD">USD</span>
         <span
           ><m-toggle
@@ -26,23 +13,67 @@
         ></span>
         <span i18n="@@PRO_SUBSCRIPTION__TOKENS">Tokens</span>
       </div>
+      <div
+        class="m-proSubscriptionPlan__toggle"
+        [ngClass]="{
+          'm-proSubscriptionPlan__toggle--hidden': currency !== 'usd'
+        }"
+      >
+        <span i18n="@@PRO_SUBSCRIPTION__YEARLY">Yearly</span>
+        <span
+          ><m-toggle
+            [mModel]="interval"
+            (mModelChange)="setInterval($event)"
+            leftValue="yearly"
+            rightValue="monthly"
+          ></m-toggle
+        ></span>
+        <span i18n="@@PRO_SUBSCRIPTION__MONTHLY">Monthly</span>
+      </div>
     </div>
 
     <div class="m-proSubscriptionPlan__pricing">
-      <span
-        class="m-proSubscriptionPlanPricing__amount"
-        i18n="@@PRO_SUBSCRIPTION__PER_MONTH"
-      >
-        <span>{{ pricing.amount }}</span> per month
-      </span>
+      <ng-container *ngIf="currency === 'usd'">
+        <div>
+          <span
+            class="m-proSubscriptionPlanPricing__amount"
+            i18n="@@PRO_SUBSCRIPTION__PER_MONTH"
+          >
+            <span>{{ pricing.amount }}</span> per month
+          </span>
 
-      <span
-        class="m-proSubscriptionPlanPricing__offer"
-        *ngIf="pricing.offerFrom"
-        i18n="@@PRO_SUBSCRIPTION__PER_MONTH"
+          <span
+            class="m-proSubscriptionPlanPricing__offer"
+            *ngIf="pricing.offerFrom"
+            i18n="@@PRO_SUBSCRIPTION__PER_MONTH"
+          >
+            <span>{{ pricing.offerFrom }}</span> per month
+          </span>
+        </div>
+        <div
+          class="m-proSubscriptionPlanPricing__intervalDesc"
+          *ngIf="interval === 'yearly'"
+        >
+          <span i18n="@@PRO_SUBSCRIPTION__BILLED_ANNUALLY">
+            Billed annually at {{ pricing.annualAmount }}
+          </span>
+        </div></ng-container
       >
-        <span>{{ pricing.offerFrom }}</span> per month
-      </span>
+      <ng-container *ngIf="currency === 'tokens'">
+        <div>
+          <span
+            class="m-proSubscriptionPlanPricing__amount"
+            i18n="@@PRO_SUBSCRIPTION__MINDS_AMOUNT"
+          >
+            <span>{{ pricing.amount | number }}</span> MINDS
+          </span>
+        </div>
+        <div class="m-proSubscriptionPlanPricing__intervalDesc">
+          <span i18n="@@PRO_SUBSCRIPTION__LIFETIME_MEMBERSHIP">
+            Lifetime membership!
+          </span>
+        </div>
+      </ng-container>
     </div>
 
     <div class="m-proSubscription__buttonsContainer">
