(chore): remove feature flag from analytics and update whitepaper link - closes #4501

--- a/src/app/modules/blockchain/marketing/v2/token.component.html
+++ b/src/app/modules/blockchain/marketing/v2/token.component.html
@@ -294,7 +294,9 @@
             <ul>
               <li>
                 <a
-                  [href]="cdnAssetsUrl + 'assets/documents/Whitepaper-v0.5.pdf'"
+                  [href]="
+                    cdnAssetsUrl + 'assets/documents/Minds-Whitepaper-v2.pdf'
+                  "
                   target="_blank"
                 >
                   <span i18n="@@COMMON__DOWNLOAD_WHITEPAPER"
