Adding in MFA authentication modal

--- a/src/app/modules/homepage-v2/homepage-v2.component.html
+++ b/src/app/modules/homepage-v2/homepage-v2.component.html
@@ -14,6 +14,10 @@
           <ng-container>Minds</ng-container>
           <span class="m-homepage__yellowLine"></span>
         </h1>
+        <!--TODO: REMOVE THIS IS FOR TESTING ONLY - REMOVE CONTROLLER LOGIC TOO-->
+        <m-button (onAction)="test()">
+          test modal
+        </m-button>
 
         <h2 ngPreserveWhitespaces>
           {{ headline }}
