Boost modal discrepancies #4485

--- a/src/app/modules/boost/modal/boost-modal.component.html
+++ b/src/app/modules/boost/modal/boost-modal.component.html
@@ -55,7 +55,7 @@
       Boost Channel
     </ng-container>
     <ng-container
-      *ngSwitchCaseDefault
+      *ngSwitchCase="'blog'"
       i18n="action|@@BOOST_MODAL__TITLE__BOOST"
     >
       Boost
