(chore): disclaimer about payout for token customers - #4516

--- a/src/app/modules/plus/marketing.component.html
+++ b/src/app/modules/plus/marketing.component.html
@@ -130,6 +130,10 @@
             monetize their content. Our monthly revenue is shared directly with
             the creators who contribute the most popular and engaging exclusive
             content to Minds+.
+            <br /><br />
+            If you pay for your membership in tokens, you are only eligible to
+            be paid out in tokens. If you pay in cash, you are eligible to be
+            paid out in cash, Bitcoin, Ether or tokens.
           </p>
 
           <p
