--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -74,6 +74,10 @@
             Receive tips and subscription payments in USD, Bitcoin, Ether or
             Minds Tokens. Earn a revenue-share for driving pageviews and
             referring new users to Minds.
+            <br /><br />
+            If you pay for your membership in tokens, you are only eligible to
+            be paid out in tokens. If you pay in cash, you are eligible to be
+            paid out in cash, Bitcoin, Ether or tokens.
           </p>
 
           <a
