--- a/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.html
+++ b/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.html
@@ -36,6 +36,9 @@
         receive multi-currency tips and subscription payments from fans and much
         more.</ng-container
       >
+      If you pay for your membership in tokens, you are only eligible to be paid
+      out in tokens. If you pay in cash, you are eligible to be paid out in
+      cash, Bitcoin, Ether or tokens.
     </div>
     <div class="m-wireCreatorMarketingBlock__learnMore">
       <a [routerLink]="['/', this.upgradeType]">
