Connecting up to API

--- a/src/app/modules/settings-v2/security/two-factor-v2/connect-app/connect-app.component.html
+++ b/src/app/modules/settings-v2/security/two-factor-v2/connect-app/connect-app.component.html
@@ -67,6 +67,6 @@
     [disabled]="disabled$ | async"
     (onAction)="enableButtonClick()"
   >
-    <ng-container i18n="@@2FA_CONNECT_APP__ENABLE_BUTTON">Enable</ng-container>
+    <ng-container i18n="@@2FA_CONNECT_APP__DONE_BUTTON">Done</ng-container>
   </m-button>
 </div>
