--- a/src/app/modules/settings-v2/security/two-factor-v2/recovery-codes/recovery-codes.component.html
+++ b/src/app/modules/settings-v2/security/two-factor-v2/recovery-codes/recovery-codes.component.html
@@ -36,8 +36,7 @@
       class="m-twoFactor__recoveryCodeInstructions"
       i18n="@@2FA_RECOVERY_CODE__DOWNLOAD_PRINT_COPY"
     >
-      Download, print, or copy your recovery codes before continuing two-factor
-      authentication setup below.
+      Download, print, or copy your recovery codes.
     </div>
     <div class="m-twoFactor__recoveryCodeBody" #recoveryCode>
       {{ recoveryCode$ | async }}
