Require an ETH balance of over 0 for onchain transfers

--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.ng.scss
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.ng.scss
@@ -59,6 +59,18 @@
       padding: 20px 24px 30px;
     }
 
+    .m-walletAlertText {
+      @include m-theme() {
+        color: themed($m-alert);
+      }
+
+      a {
+        @include m-theme() {
+          color: themed($m-link);
+        }
+      }
+    }
+
     .m-walletSecondaryText--desc {
       margin-top: 5px;
 
@@ -77,8 +89,24 @@
     }
   }
 
+  .m-walletOnchainTransfer__separator {
+    padding: 0 4px 0 8px;
+  }
+
   .m-walletOnchainTransfer__balanceWrapper {
-    span:last-child {
+    &--alert {
+      @include m-theme() {
+        color: themed($m-alert);
+      }
+
+      .m-walletOnchainTransfer__balance {
+        @include m-theme() {
+          color: themed($m-alert);
+        }
+      }
+    }
+
+    span {
       margin-left: 5px;
     }
   }
