Launch buy crypto modal from on-chain transfer modal

--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
@@ -170,7 +170,8 @@
         >
           Note: a small amount of ETH will be charged to cover the transaction
           fee. You currently have a balance of 0 ETH -
-          <a href="#">Add ETH</a> to continue
+          <span (click)="onPurchaseTokensClick($event)">Add ETH</span> to
+          continue
         </p>
       </div>
     </ng-container>
