Refactor overlay when metamask is open

--- a/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
+++ b/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
@@ -1,37 +1,11 @@
-<div class="m--blockchain--transaction-overlay">
+<div
+  class="m--blockchain--transaction-overlay"
+  [ngClass]="{
+    'm--blockchain--transaction-overlay--transparant':
+      comp !== COMP_SETUP_METAMASK
+  }"
+>
   <div class="m--blockchain--transaction-overlay--content">
-    <ng-container *ngIf="comp !== COMP_SETUP_METAMASK">
-      <img
-        [src]="cdnAssetsUrl + 'assets/logos/logo.svg'"
-        class="m--blockchain--transaction-overlay--logo"
-      />
-      <h2
-        class="m--blockchain--transaction-overlay--title"
-        i18n="@@M__BLOCKCHAIN__TX_OVERLAY__COMPLETE_YOUR_TX"
-        *ngIf="comp !== COMP_SETUP_METAMASK"
-      >
-        Complete your OnChain transaction
-      </h2>
-
-      <p
-        class="m--blockchain--transaction-overlay--note"
-        *ngIf="comp === COMP_METAMASK"
-        i18n="@@M__BLOCKCHAIN__TX_OVERLAY__COMPLETE_USING_WALLET"
-      >
-        Please open your Wallet Provider client to complete the transaction. If
-        you are using a mobile wallet, like Coinbase, please complete the
-        transaction prompt on your wallet's mobile app
-      </p>
-
-      <p
-        class="m--blockchain--transaction-overlay--note"
-        *ngIf="comp !== COMP_UNLOCK && !!message"
-        i18n="@@M__BLOCKCHAIN__TX_OVERLAY__YOURE_APPROVING_MESSAGE"
-      >
-        You are approving a {{ message }}
-      </p>
-    </ng-container>
-
     <ng-container *ngIf="comp === COMP_SETUP_METAMASK">
       <m-get-metamask
         (actioned)="handleMetamaskAction($event)"
