--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -10,6 +10,12 @@
   }"
   #scrollArea
 >
+  <m-loadingSpinner
+    [inProgress]="inProgress"
+    *ngIf="inProgress && comments?.length === 0"
+  >
+  </m-loadingSpinner>
+
   <!-- --------------------------------  -->
   <div class="m-comments__viewMore" *ngIf="loadPrevious && showReplies">
     <m-button
