--- a/src/app/modules/plus/marketing.component.html
+++ b/src/app/modules/plus/marketing.component.html
@@ -61,10 +61,14 @@
       </div>
 
       <div
-        class="m-grid__column-5 m-grid__column-12--mobile m-marketing__image"
+        class="m-grid__column-5 m-grid__column-12--mobile m-marketing__image m-marketing__imageContainer"
       >
         <span>
-          <img [src]="cdnAssetsUrl + 'assets/product-pages/plus/plus-1.jpg'" />
+          <img
+            [src]="cdnAssetsUrl + 'assets/product-pages/plus/mobile-plus.png'"
+            class="m-marketing__image--tall"
+            alt="Minds plus"
+          />
         </span>
       </div>
     </div>
