Updating whitepaper link in footer

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -57,7 +57,7 @@
 
           <li>
             <a
-              href="https://cdn-assets.minds.com/front/dist/en/assets/documents/Whitepaper-v0.5.pdf"
+              href="https://cdn-assets.minds.com/front/dist/browser/en/assets/documents/Minds-Whitepaper-v2.pdf"
               target="_blank"
               i18n="@@COMMON_FOOTER__WHITEPAPER"
             >
